<resources>
    <string name="app_name">MyHealth</string>
    <string name="photo_label">Profile Photo</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Your Email</string>
    <string name="weight_label">Weight</string>
    <string name="weight_hint">Your Weight</string>
    <string name="calorie_goal_label">Calorie Goal</string>
    <string name="calorie_goal_hint">Your Calorie Goal</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="change_button">Change</string>
    <string name="profile_preference_key">PROFILE_PREFERENCE_KEY</string>
    <string name="settings_preference_key">SETTINGS_PREFERENCE_KEY</string>
    <string name="default_units">Miles</string>
    <string name="history">History</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>