<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_label"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/default_margin">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_placeholder_img"
                android:contentDescription="Your profile picture"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_button"
                android:onClick="onChangePhotoClicked"
                android:layout_marginLeft ="@dimen/default_margin"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"/>
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="@dimen/default_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"/>
        <EditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/default_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight_label"/>
        <EditText
            android:id="@+id/profile_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:inputType="phone"
            android:layout_marginBottom="@dimen/default_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calorie_goal_label"/>
        <EditText
            android:id="@+id/profile_calorie_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calorie_goal_hint"
            android:inputType="phone"
            android:layout_marginBottom="@dimen/default_margin"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="@dimen/default_margin"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:onClick="onSaveClicked"
                android:minWidth="125dp"
                android:layout_marginRight="@dimen/default_margin"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:onClick="onCancelClicked"
                android:minWidth="125dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>